@@ -1,3 +1,2 @@
-import logging
 
-__version__ = '2.2.1.dev0'
+__version__ = '2.2.1.dev1'
