@@ -8,7 +8,7 @@ flakes-ignore =
 
 [tox]
 minversion=1.9.2
-envlist = py26-version,py27,py26,py34,server21
+envlist = py26-version,py27,py26,py34,py27-lin,server21
 
 [testenv]
 passenv = LANG
@@ -18,8 +18,13 @@ deps = pytest
        sphinx==1.1.3
        webtest
        wheel
+       py27-lin: detox
 
 commands = py.test --maxfail=3 {posargs} 
+
+[testenv:py27-lin]
+commands = py.test -k detox testing/test_test.py
+
 
 [testenv:flakes]
 platform = linux
